[fix]: align button to input box on join page
changed wiremock to accept any number for roomId

--- a/src/app/join-room/join-room.component.css
+++ b/src/app/join-room/join-room.component.css
@@ -1,3 +1,6 @@
 .join {
   padding: 15px;
 }
+.btn {
+  margin: 0;
+}
